精简两份 README 到一屏